Fix anomaly detection chart overflow on small screen

--- a/src/AnomalyDetection/style.css
+++ b/src/AnomalyDetection/style.css
@@ -66,3 +66,10 @@
   color: #e2237e;
   border-color: #e2237e;
 }
+
+
+@media (min-width: 485px) {
+  .anomaly-chart-container--div {
+    overflow: hidden;
+  }
+}
